finish the game-based security section

--- a/writeup/category-theory.tex
+++ b/writeup/category-theory.tex
@@ -7,7 +7,7 @@
 \begin{dfn}[Category]\label{def:category}
 	A \emph{category} $\cat{C}$ consists of the following data:
 	\begin{itemize}
-		\item a collection\note{We use the word \emph{collection} for foundational reasons: in
+		\item a collection\footnote{We use the word \emph{collection} for foundational reasons: in
 			      many important examples, the objects and morphisms do not form sets. We ignore
 			      such foundational issues here; they are discussed in~\cite[Section
 				      1.6]{maclane-1971}.} of objects, overloadingly also called $\cat{C}$;
@@ -93,7 +93,7 @@ symbolic equalities of \Cref{def:category}. The key idea is that such diagrams
 can be ``pasted'', allowing us to build up complex equalities from simpler ones.
 
 \begin{dfn}[Commutative Diagram]\label{def:commutative diagram}
-	A diagram\note{The notion of a diagram can be made precise fairly easily;
+	A diagram\footnote{The notion of a diagram can be made precise fairly easily;
 		see~\cite[Section 1.6]{riehl-2017}.} \emph{commutes} if, for any pair of paths
 	through the diagram with the same start and end, the composite morphisms are
 	equal.
