--- a/writeup/references.bib
+++ b/writeup/references.bib
@@ -148,7 +148,7 @@
 	url = {https://www.cs.tau.ac.il/~canetti/f08-materials/scribe11.pdf},
 }
 
-	@book{goldreich-2001,
+@book{goldreich-2001,
 	title = {Foundations of Cryptography: Volume 1, Basic Tools},
 	author = {Goldreich, O.},
 	isbn = {9780521791724},
@@ -156,3 +156,52 @@
 	publisher = {Cambridge University Press},
 }
 
+
+@inproceedings{pederson-1991,
+	title = {Non-interactive and information-theoretic secure verifiable secret
+	         sharing},
+	author = {Pedersen, Torben Pryds},
+	booktitle = {Annual international cryptology conference},
+	pages = {129--140},
+	year = {1991},
+	organization = {Springer},
+}
+
+@inproceedings{goldreich-levin-1989,
+	author = {Goldreich, O. and Levin, L. A.},
+	title = {A Hard-Core Predicate for All One-Way Functions},
+	year = {1989},
+	isbn = {0897913078},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	url = {https://doi.org/10.1145/73007.73010},
+	doi = {10.1145/73007.73010},
+	booktitle = {Proceedings of the Twenty-First Annual ACM Symposium on Theory of
+	             Computing},
+	pages = {25–32},
+	numpages = {8},
+	location = {Seattle, Washington, USA},
+	series = {STOC '89},
+}
+
+@inproceedings{yao-1982,
+	author = {Yao, Andrew C.},
+	booktitle = {23rd Annual Symposium on Foundations of Computer Science (sfcs
+	             1982)},
+	title = {Theory and application of trapdoor functions},
+	year = {1982},
+	volume = {},
+	number = {},
+	pages = {80-91},
+	doi = {10.1109/SFCS.1982.45},
+}
+
+@misc{trevisan-2009,
+	author = {Luca Trevisan},
+	title = {Notes for Lecture 27},
+	day = {30},
+	month = {April},
+	year = {2009},
+	collection = {CS276: Cryptography},
+	url = {https://theory.stanford.edu/~trevisan/cs276/lecture27.pdf},
+}
