--- a/writeup/prelude.tex
+++ b/writeup/prelude.tex
@@ -97,6 +97,9 @@
 \def\<{\langle}
 \def\>{\rangle}
 \def\pr{\text{pr}}
+\newcommand{\xcong}[1]{\overset{#1}{\cong}}
+\newcommand{\xequiv}[1]{\overset{#1}{\equiv}}
+\def\compind{\xequiv{\text{c}}}
 
 % crypto stuff
 \usepackage{mdframed}
